<resources>
    <string name="app_name">NUMAD22Sp_TianleDong</string>
    <string name="About">Button</string>
    <string name="about">About</string>
    <string name="clicky">Clicky</string>
    <string name="a">A</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="clickyButtonText">Pressed: -</string>
    <string name="linkCollector">Link Collector</string>
    <string name="name">Name: Tianle Dong</string>
    <string name="email">Email: dong.tia@northeastern.edu</string>
    <string name="AddLinkButton">Add Link</string>
    <string name="link_name">Link Name</string>
    <string name="link_url">URL</string>
    <string name="locator">Locator</string>
    <string name="latitude"><b>Latitude</b></string>
    <string name="longitude"><b>Longitude</b></string>
    <string name="latitude_val">0.0</string>
    <string name="longitude_Val">0.0</string>
    <string name="web_service">Web Service</string>
    <string name="ok">OK</string>
    <string name="air_pollution">Air Pollution</string>
</resources>