<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.neu.madcourse.numad22sp_tianledong.ClickyActivity" >

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="295dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.349"
        app:useDefaultMargins="true">

        <Button
            android:id="@+id/clickyButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:onClick="onClick"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="0" />

        <Button
            android:id="@+id/clickyButtonB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:onClick="onClick"
            app:layout_column="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_gravity="center"
            app:layout_row="0" />

        <Button
            android:id="@+id/clickyButtonC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:onClick="onClick"
            app:layout_column="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_row="0" />

        <Button
            android:id="@+id/clickyButtonD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/d"
            android:onClick="onClick"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_row="1" />

        <Button
            android:id="@+id/clickyButtonE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e"
            android:onClick="onClick"
            app:layout_column="1"
            app:layout_gravity="center"
            app:layout_row="1" />

        <Button
            android:id="@+id/clickyButtonF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/f"
            android:onClick="onClick"
            app:layout_column="2"
            app:layout_gravity="center"
            app:layout_row="1" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/clickyButtonText"
        android:layout_width="159dp"
        android:layout_height="34dp"
        android:text="@string/clickyButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="0.061" />
</androidx.constraintlayout.widget.ConstraintLayout>